I made changes to the CSS. 1. I added two aesthetic styles (“clean” and “retro”). 2. I made changes that correct previous errors. Previously, it was so that the border of the “TOC” ( table of contents) was rigidly set to black - this resulted in the fact that in dark mode it was not visible. Similarly, with the highlighting of a section of text (after clicking on the TOC) - this was rigidly set while it should be adjusted to the selected color scheme of the page. 3. I added to “shortcodes” a function that allows you to apply conveniently basic HTML <details> (which is not included in the specification). This is useful if you want to be able to expand and hide, for example, a longer piece of text. This has also been included in the CSS so that it looks aesthetically pleasing. 4. I changed the readme.md - to make it easier for others to use the template. 5. I added an example draft post - to show how to use the TOC function, details and change styles.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,5 @@
 // -------------- THEME SWITCHER -------------- //
-@mixin theme($--bg-color, $--primary-text-color, $--secondary-text-color, $--link-color, $--visited-link-color) {
+@mixin theme($--bg-color, $--primary-text-color, $--secondary-text-color, $--link-color, $--visited-link-color, $--highlight) {
   background-color: $--bg-color;
 
   color: $--primary-text-color;
@@ -7,9 +7,13 @@
   a {
     color: $--link-color;
     text-decoration: none;
-
     &:visited { color: $--visited-link-color; }
     &:hover { text-decoration: underline; }
+  }
+
+  details summary {
+    color: $--link-color;
+    text-decoration: none;
   }
 
   code:not(pre > code) {
@@ -17,20 +21,44 @@
     color: $--bg-color;
   }
 
+  *:target {
+    background: $--highlight;
+    color: $--primary-text-color;
+   }
+
+   table, th, td {
+     border: thin solid $--primary-text-color;
+
+   }
+  .toc {
+    border: thin solid $--link-color;
+    padding: 1rem;
+  }
+
   figcaption { color: $--secondary-text-color; }
 }
 
+
 @mixin dark-appearance {
-  @include theme(#212121, #fafafa, #eeeeee, #0071bc, #a359e9);
+  @include theme(#212121, #fafafa, #000000, #0071bc, #a359e9, #FFFF00);
 }
 
 @mixin light-appearance {
-  @include theme(#ffffff, #212121, #666666, #1e70bf, #921292);
+  @include theme(#ffffff, #212121, #666666, #1e70bf, #921292, #FFFF00);
+}
+
+@mixin clean-appearance {
+  @include theme(#fbfbfb, #212121, #dfedff, #0066ff, #0066ff, #C3D3FF);
+}
+
+@mixin retro-appearance {
+  @include theme(#000a1a, #c4ffc6, #161616, #c0ff00, #c0ff00, #007A35);
 }
 
 body[a="dark"] { @include dark-appearance; }
 body[a="light"] { @include light-appearance; }
-
+body[a="clean"] { @include clean-appearance; }
+body[a="retro"] { @include retro-appearance; }
 
 @media (prefers-color-scheme: dark) {
   body[a="auto"] { @include dark-appearance; }
@@ -55,15 +83,13 @@ body {
 
 .post-meta { text-align: right; }
 
-h2, h3, h4, h5, h6 { margin-top: 3rem; }
+h2, h3, h4, h5, h6 { margin-top: 0.5rem; }
 
 hr { margin: 2rem 0; }
 
 p { margin: 1rem 0; }
 
 li { margin: 0.4rem 0; }
-
-*:target { background: yellow; }
 
 .w {
   max-width: 640px;
@@ -72,7 +98,6 @@ li { margin: 0.4rem 0; }
 }
 
 .toc {
-  border: thin solid black;
   padding: 1rem;
 }
 
